--- a/index.html
+++ b/index.html
@@ -1,80 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Héroes</title>
     <link
-      <link
-      href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300&family=Oswald:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400&display=swap"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
   </head>
   <body>
     <header>
-      <div><p>Descuentos 20%</p></div>
+      <p>Descuentos 20%</p>
     </header>
-    <div class="cab"><h1>Heroes</h1></div>
-    <div class="cards">
-      <div class="card">
-        <div class="cardtop  bg1">
-          <img class="life" src="img/Vector.png" alt="" />
-          <img class="user" src="img/bat.png" alt="" />
-        </div>
-        <div class="cardbottom">
-          <div>
-            <p>BATMAN</p>
-            <p>
-              Bruce Wayne es el único personaje que se identifica como Batman y
-              aparece en Batman, Detective Comics, Batman y Robin, y Batman: The
-              Dark Knight. Dick Grayson vuelve al manto de Nightwing
-            </p>
+    <h1>Super Héroes</h1>
+    <main>
+      <section>
+        <article>
+          <div class="contenedor bgBatman">
+            <i class="fa-solid fa-heart"></i>
           </div>
+          <img src="img/batman.png" alt="Foto de Batman" />
+          <h3>Batman</h3>
+          <p>
+            Batman (conocido inicialmente como Bat-Man) es un personaje creado
+            por los estadounidenses Bob Kane y Bill Finger, y propiedad de DC
+            Comics. Apareció por primera vez en la historia titulada «El caso
+            del sindicato químico» de la revista Detective Comics N.º 27,
+            lanzada por la editorial National Publications el 30/3/1939.
+          </p>
           <button>Ver más</button>
-        </div>
-      </div>
+        </article>
 
-      <div class="card">
-        <div class="cardtop bg2">
-          <img class="life" src="img/Vector.png" alt="" />
-          <img class="user" src="img/har.png" alt="" />
-        </div>
-        <div class="cardbottom">
-          <div>
-            <p>Harley Quinn</p>
-            <p>
-              La creación de Harley Quinn fue una idea de último minuto
-              propuesta por el escritor estadounidense Paul Dini para modificar
-              una escena del vigésimo-segundo episodio de Batman: la serie
-              animada
-            </p>
+        <article class="wonderwoman">
+          <div class="contenedor bgWonderWoman">
+            <i class="fa-solid fa-heart"></i>
           </div>
+          <img src="img/wonderwoman.png" alt="Foto de Wonder Woman" />
+          <h3>MUJER MARAVILLA</h3>
+          <p>
+            Es una superheroína creada por William Moulton Marston para la
+            editorial DC Comics. Es una princesa guerrera de las Amazonas,
+            pueblo ficticio basado en el de las amazonas de la mitología griega.
+            En su tierra natal es conocida como la princesa Diana de Temiscira
+            pero fuera de esta utiliza la identidad secreta de Diana Prince.
+          </p>
           <button>Ver más</button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="cardtop bg3">
-          <img class="life" src="img/Vector.png" alt="" />
-          <img class="user" src="img/bat.png" alt="" />
-        </div>
-        <div class="cardbottom">
-          <div>
-            <p>BATMAN</p>
-            <p>
-              Bruce Wayne es el único personaje que se identifica como Batman y
-              aparece en Batman, Detective Comics, Batman y Robin, y Batman: The
-              Dark Knight. Dick Grayson vuelve al manto de Nightwing
-            </p>
+        </article>
+        <article class="superman">
+          <div class="contenedor bgSuperman">
+            <i class="fa-solid fa-heart"></i>
           </div>
+          <img
+            class="imgsuper2"
+            src="img/superman2.png"
+            alt="Foto de superrrrr"
+          />
+          <img class="imgsuper" src="img/superman.png" alt="Foto de Superman" />
+          <h3>Superman</h3>
+          <p>
+            Es un superhéroe que apareció por primera vez en los cómics
+            estadounidenses publicados por DC Comics. El personaje fue creado
+            por el escritor estadounidense Jerry Siegel y el artista canadiense
+            Joe Shuster en 1933 cuando ambos se encontraban viviendo en
+            Cleveland, Ohio.
+          </p>
           <button>Ver más</button>
-        </div>
-      </div>
-    </div>
+        </article>
+        <article class="harleyquinn">
+          <div class="contenedor bgHarley">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+          <img src="img/harleyQuinn.png" alt="Foto de Harley Quinn" />
+          <h3>Harley Quinn</h3>
+          <p>
+            Harley Quinn es un personaje ficticio creado por los estadounidenses
+            Paul Dini y Bruce Timm para la editorial DC Comics. Quinn hizo su
+            debut en el vigésimo-segundo episodio de Batman: la serie animada,
+            «El favor del Joker», en septiembre de 1992 y se convirtió en una
+            villana recurrente en la serie
+          </p>
+          <button>Ver más</button>
+        </article>
+      </section>
+    </main>
     <footer>
-      <div>Todos los derechos reservados a FRONT END 1</p></div>
+      <p>Todos los derechos reservados</p>
+      <img src="img/gitHub.svg" alt="Logo de gitHub" />
     </footer>
   </body>
 </html>
